--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -235,7 +235,7 @@ input {
 .form__control-file {
     .form__control-input-file {
         height: 2.375rem;
-        width: max-content;
+        width: fit-content;
         background: transparent;
         border-radius: .25rem;
         border: 1px solid $color-red;
