--- a/src/components/EnterSite.astro
+++ b/src/components/EnterSite.astro
@@ -8,9 +8,11 @@ import Media from "./Enter-Site/Media.astro";
 <section class="enter__site">
   <div class="grid">
     <div class="grid__content">
-      <Headings />
-      <Buttons />
-      <Form />
+     <div class="wrapper">
+        <Headings />
+        <Buttons />
+        <Form />
+     </div>
     </div><!-- Content -->
     <div class="grid__media">
       <Media />
