--- a/src/styles/components/_enter-site.scss
+++ b/src/styles/components/_enter-site.scss
@@ -24,8 +24,8 @@
             background-image: url('/assets/images/enter-site/badge-desktop.png');
             max-width: 520px;
 
-            left: 50%;
-            transform: translateX(-50%);
+            // left: 50%;
+            // transform: translateX(-50%);
         }
     }
 
@@ -41,10 +41,10 @@
             //   height: 812px;
             overflow: hidden;
             padding-top: 1rem;
-            padding-right: 1.5rem;
-            padding-left: 1.5rem;
+            // padding-right: 1.5rem;
+            // padding-left: 1.5rem;
             padding-bottom: 1rem;
-            width: 100vw;
+            width: 100%;
 
             &_title,
             &_sub-title {
