--- a/src/components/Pinch-to-zoom.astro
+++ b/src/components/Pinch-to-zoom.astro
@@ -1,11 +1,12 @@
 ---
 type Props = {
   id: string;
+  classes?: string;
 };
-const { id } = Astro.props;
+const { id, classes = "" } = Astro.props;
 ---
 
-<div class="pinch-to-zoom f-panzoom" id={id}>
+<div class={`pinch-to-zoom f-panzoom ${classes}`} id={id}>
   <button class="pinch-to-zoom__close-modal" style="display: none">×</button>
   <div class="pinch-to-zoom__container f-panzoom__viewport">
     <div class="f-panzoom__content">
