--- a/src/styles/components/_patient-case-file.scss
+++ b/src/styles/components/_patient-case-file.scss
@@ -3,6 +3,14 @@
   background-color: $color-white;
   padding-bottom: 2rem;
 
+  &.mobile--version {
+    display: block;
+
+    @media screen and (min-width: 1024px) {
+      display: none;
+    }
+  }
+
   &::before {
     content: '';
     position: absolute;
@@ -78,12 +86,12 @@
   }
 
   .patient__case_grid {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, auto);
-    color: red;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    // display: grid;
+    // grid-template-columns: 1fr;
+    // grid-template-rows: repeat(3, auto);
+    // color: red;
+    // grid-column-gap: 0px;
+    // grid-row-gap: 0px;
     margin-top: 4rem;
 
     .grid_header {
@@ -115,13 +123,20 @@
       border-right: 1px solid $color-black;
       border-left: 1px solid $color-black;
       display: grid;
-      grid-template-columns: 1fr 100px 100px;
+      grid-template-columns: 1fr 90px 90px;
       align-items: center;
       min-height: 4.125rem;
 
+      @media screen and (min-width: 375px) {
+        grid-template-columns: 1fr 100px 100px;
+      }
+
       @media screen and (min-width: 600px) {
         grid-template-columns: 1fr 150px 150px;
+      }
 
+      @media screen and (min-width: 768px) {
+        grid-template-columns: 1fr 200px 200px;
       }
 
       >div {
