--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,7 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import ISI from "../components/ISI.astro";
 import CookieBanner from "../components/CookieBanner.astro";
+import StayConnected from "../components/stay-conected.astro";
 export interface Props {
   title: string;
   pageClass?: string;
@@ -41,6 +42,7 @@ const {
     {showISI && <ISI />}
     {showFooter && <Footer />}
     <CookieBanner />
+    <StayConnected />  
   </body>
   <script src="/assets/js/script.js" type="module"></script>
 </html>
