--- a/src/styles/components/_stay-connected.scss
+++ b/src/styles/components/_stay-connected.scss
@@ -135,6 +135,16 @@
         }
     }
 
+    .form__control .form__control-error {
+    top: 86%;
+    }
+
+    #custom-error{
+        @media screen and (min-width:740px) {
+        left: 38px;
+        }
+    }
+
     .red-check{
         margin-top: 25px;
         margin-left: -27px;
@@ -269,6 +279,14 @@
         bottom: 75px;
         }
     }
+
+    .modal__close{
+        cursor: pointer;
+    }
+}
+
+.connected-modal{
+    cursor: pointer;
 }
 .fancybox__content{
     background-color: transparent;
