--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,6 +30,7 @@ const {
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <!-- TypeKit Font Includes: Oswald & Veener Fonts -->
+    <script src="/assets/js/redirector.js" type="module"></script>
     <link rel="stylesheet" href="https://use.typekit.net/hfp3usx.css" />
     <title>{title}</title>
   </head>
