--- a/src/styles/components/_accordions.scss
+++ b/src/styles/components/_accordions.scss
@@ -1,5 +1,6 @@
 .accordion {
 
+
   &__item_content {
     color: $color-black;
     overflow: hidden;
@@ -11,7 +12,8 @@
     margin-top: 1rem;
     padding-top: 0;
 
-    @include transition(max-height, 0.3s, ease-in-out);
+
+    // @include transition(max-height, 0.1s, ease-in-out);
 
     h2 {
       color: $color-red;
@@ -175,11 +177,12 @@
 
     .accordion__item_content {
       max-height: 100%;
+      padding-bottom: 1.5rem;
     }
 
     .accordion__item_title::after {
       background-image: url('/assets/images/acc-minus.png');
-      transition: .5s;
+      @include transition(background-image, 0.3s, ease-in-out);
     }
   }
 
