drag to close false feature added

--- a/src/components/stay-conected.astro
+++ b/src/components/stay-conected.astro
@@ -362,6 +362,7 @@
                     placeFocusBack: true,
                     trapFocus: true,
                     closeButton: false,
+                    dragToClose: false
                     /*  on: {
                             close: () => {
                                 continueButton.setAttribute("href", "");
