Custom Image Sizes on Pinch to Zoom

--- a/src/components/Case-Files/CaseFileModal.astro
+++ b/src/components/Case-Files/CaseFileModal.astro
@@ -152,6 +152,7 @@ import PatientCaseFilesWrapper from "./PatientCaseFilesWrapper.astro";
                 <img
                   src="/assets/images/case-files/nathan/nathan-rad-1-mobile.png"
                   alt=""
+                  style="max-width: 95px;"
                 />
               </picture>
               <div class="patient">
@@ -167,6 +168,7 @@ import PatientCaseFilesWrapper from "./PatientCaseFilesWrapper.astro";
                 <img
                   src="/assets/images/case-files/nathan/nathan-rad-2-mobile.png"
                   alt=""
+                  style="max-width: 162px;"
                 />
               </picture>
               <div class="patient">
