--- a/src/styles/components/_patient-case-file.scss
+++ b/src/styles/components/_patient-case-file.scss
@@ -202,6 +202,16 @@
     display: inline-block;
     width: auto !important;
     padding-left: 0;
+
+  }
+
+}
+
+.fancybox--pinch-to-zoom {
+  .pinch-to-zoom.f-panzoom {
+    img {
+      max-width: 100% !important;
+    }
   }
 
   p.patient {
