--- a/src/components/Pinch-to-zoom.astro
+++ b/src/components/Pinch-to-zoom.astro
@@ -2,18 +2,25 @@
 type Props = {
   id: string;
   classes?: string;
+  useDefaultButton?: boolean;
 };
-const { id, classes = "" } = Astro.props;
+
+const { id, classes = "", useDefaultButton = true } = Astro.props;
 ---
 
 <div class={`pinch-to-zoom f-panzoom ${classes}`} id={id}>
   <button class="pinch-to-zoom__close-modal" style="display: none">×</button>
   <div class="pinch-to-zoom__container f-panzoom__viewport">
     <div class="f-panzoom__content">
-      <button
-        data-panzoom-action="zoomToFull"
-        data-content-id={id}
-        class="button button--pinch-to-zoom"></button>
+      {
+        useDefaultButton && (
+          <button
+            data-panzoom-action="zoomToFull"
+            data-content-id={id}
+            class="button button--pinch-to-zoom"
+          />
+        )
+      }
       <slot />
     </div>
   </div>
