Update Image Styles on PanZoom Active

--- a/src/styles/components/_patient-case-file.scss
+++ b/src/styles/components/_patient-case-file.scss
@@ -209,7 +209,7 @@
 
 .fancybox--pinch-to-zoom {
   .pinch-to-zoom.f-panzoom {
-    img {
+    .rad__thumbnail {
       max-width: 100% !important;
     }
   }
