--- a/src/components/Case-Files/CaseFileModal.astro
+++ b/src/components/Case-Files/CaseFileModal.astro
@@ -144,63 +144,66 @@ import PatientCaseFilesWrapper from "./PatientCaseFilesWrapper.astro";
               </li>
             </ul>
             <PinchToZoom id="pt-1-image-1" useDefaultButton={false}>
-              <picture>
-                <button
-                  data-panzoom-action="zoomToFull"
-                  data-content-id="pt-1-image-1"
-                  class="button button--pinch-to-zoom"></button>
-                <source
-                  srcset="/assets/images/case-files/nathan/nathan-rad-1-desktop.png"
-                  media="(min-width: 768px)"
-                />
-                <img
-                  src="/assets/images/case-files/nathan/nathan-rad-1-mobile.png"
-                  alt=""
-                  style="max-width: 95px;"
-                />
-              </picture>
-              <div class="patient">
-                <p>Femur fracture age 13</p>
+              <div class="rad__thumbnail" style="max-width: 95px;">
+                <picture>
+                  <button
+                    data-panzoom-action="zoomToFull"
+                    data-content-id="pt-1-image-1"
+                    class="button button--pinch-to-zoom"></button>
+                  <source
+                    srcset="/assets/images/case-files/nathan/nathan-rad-1-desktop.png"
+                    media="(min-width: 768px)"
+                  />
+                  <img
+                    src="/assets/images/case-files/nathan/nathan-rad-1-mobile.png"
+                    alt=""
+                  />
+                </picture>
+                <div class="patient">
+                  <p>Femur fracture age 13</p>
+                </div>
               </div>
             </PinchToZoom>
             <PinchToZoom id="pt-1-image-2" useDefaultButton={false}>
-              <picture>
-                <button
-                  data-panzoom-action="zoomToFull"
-                  data-content-id="pt-1-image-2"
-                  class="button button--pinch-to-zoom"></button>
-                <source
-                  srcset="/assets/images/case-files/nathan/nathan-rad-2-desktop.png"
-                  media="(min-width: 768px)"
-                />
-                <img
-                  src="/assets/images/case-files/nathan/nathan-rad-2-mobile.png"
-                  alt=""
-                  style="max-width: 162px;"
-                />
-              </picture>
-              <div class="patient">
-                <p>Metatarsal fracture age 16</p>
+              <div class="rad__thumbnail" style="max-width: 162px;">
+                <picture>
+                  <button
+                    data-panzoom-action="zoomToFull"
+                    data-content-id="pt-1-image-2"
+                    class="button button--pinch-to-zoom"></button>
+                  <source
+                    srcset="/assets/images/case-files/nathan/nathan-rad-2-desktop.png"
+                    media="(min-width: 768px)"
+                  />
+                  <img
+                    src="/assets/images/case-files/nathan/nathan-rad-2-mobile.png"
+                    alt=""
+                  />
+                </picture>
+                <div class="patient">
+                  <p>Metatarsal fracture age 16</p>
+                </div>
               </div>
             </PinchToZoom>
             <PinchToZoom id="pt-1-image-3" useDefaultButton={false}>
-              <picture>
-                <button
-                  data-panzoom-action="zoomToFull"
-                  data-content-id="pt-1-image-3"
-                  class="button button--pinch-to-zoom"></button>
-                <source
-                  srcset="/assets/images/case-files/nathan/nathan-rad-3-desktop.png"
-                  media="(min-width: 768px)"
-                />
-                <img
-                  src="/assets/images/case-files/nathan/nathan-rad-3-mobile.png"
-                  alt=""
-                  style="width: 138px;"
-                />
-              </picture>
-              <div class="patient">
-                <p>Tibial fracture age 57</p>
+              <div class="rad__thumbnail" style="max-width: 138px;">
+                <picture>
+                  <button
+                    data-panzoom-action="zoomToFull"
+                    data-content-id="pt-1-image-3"
+                    class="button button--pinch-to-zoom"></button>
+                  <source
+                    srcset="/assets/images/case-files/nathan/nathan-rad-3-desktop.png"
+                    media="(min-width: 768px)"
+                  />
+                  <img
+                    src="/assets/images/case-files/nathan/nathan-rad-3-mobile.png"
+                    alt=""
+                  />
+                </picture>
+                <div class="patient">
+                  <p>Tibial fracture age 57</p>
+                </div>
               </div>
             </PinchToZoom>
           </Fragment>
