Fix Bullet Lists Styles

--- a/src/styles/components/_accordions.scss
+++ b/src/styles/components/_accordions.scss
@@ -47,11 +47,12 @@
     }
 
     .item {
-      margin-left: 27px;
+      margin-left: 1.6875rem;
+      list-style-type: disc;
     }
 
     .sub-item {
-      margin-left: 49.6px;
+      margin-left: 3.1rem;
     }
 
 
